syntax = "proto3";
import "Open_IM/pkg/proto/sdk_ws/ws.proto";
option go_package = "./rtc;rtc";
package rtc;

message CommonResp{
  int32  errCode = 1;
  string errMsg = 2;
}

message GetJoinTokenReq{
  string apiKey = 1;
  string apiSecret = 2;
  string room = 3;
  string identity = 4;
  server_api_params.ParticipantMetaData metaData = 5;
  string operationID = 6;
}

message GetJoinTokenResp{
  CommonResp CommonResp = 1;
  string jwt = 2;
}

service RtcService {
  rpc GetJoinToken(GetJoinTokenReq) returns(GetJoinTokenResp);
}
